--- a/test-output/index.html
+++ b/test-output/index.html
@@ -267,20 +267,20 @@ data.addRows(3);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'basePageNavigation')
 data.setCell(0, 2, 'E2EDemoTesting.HomePage')
-data.setCell(0, 3, 28321);
+data.setCell(0, 3, 31457);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'basePageNavigation')
-data.setCell(1, 2, 'E2EDemoTesting.validateTitle')
-data.setCell(1, 3, 4815);
+data.setCell(1, 2, 'E2EDemoTesting.validateNavigationBar')
+data.setCell(1, 3, 4202);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'basePageNavigation')
-data.setCell(2, 2, 'E2EDemoTesting.validateNavigationBar')
-data.setCell(2, 3, 525);
+data.setCell(2, 2, 'E2EDemoTesting.validateTitle')
+data.setCell(2, 3, 714);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 52 seconds</span>
+              <span class="suite-total-time">Total running time: 1 minutes</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -335,34 +335,37 @@ return data;
               <div class="chronological-class-name">E2EDemoTesting.HomePage</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
                 <span class="method-name">initialize</span>
-                <span class="method-start">1 ms</span>
+                <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
-            </div> <!-- chronological-class -->
-            <div class="chronological-class">
-              <div class="chronological-class-name">E2EDemoTesting.validateTitle</div> <!-- chronological-class-name -->
-              <div class="test-method">
-                <img src="failed.png">
-                </img>
-                <span class="method-name">basePageNavigation</span>
-                <span class="method-start">21724 ms</span>
-              </div> <!-- test-method -->
-            </div> <!-- chronological-class -->
-            <div class="chronological-class">
-              <div class="chronological-class-name">E2EDemoTesting.HomePage</div> <!-- chronological-class-name -->
-              <div class="test-method">
-                <span class="method-name">basePageNavigation</span>
-                <span class="method-start">23239 ms</span>
-              </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">E2EDemoTesting.validateNavigationBar</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">basePageNavigation</span>
-                <span class="method-start">26315 ms</span>
+                <span class="method-start">30188 ms</span>
               </div> <!-- test-method -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">E2EDemoTesting.HomePage</div> <!-- chronological-class-name -->
+              <div class="test-method">
+                <span class="method-name">basePageNavigation</span>
+                <span class="method-start">31921 ms</span>
+              </div> <!-- test-method -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">E2EDemoTesting.validateTitle</div> <!-- chronological-class-name -->
+              <div class="test-method">
+                <img src="failed.png">
+                </img>
+                <span class="method-name">basePageNavigation</span>
+                <span class="method-start">33450 ms</span>
+              </div> <!-- test-method -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">E2EDemoTesting.validateNavigationBar</div> <!-- chronological-class-name -->
               <div class="configuration-test after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">26854 ms</span>
+                <span class="method-start">34405 ms</span>
               </div> <!-- configuration-test after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
@@ -371,14 +374,14 @@ return data;
                 <img src="failed.png">
                 </img>
                 <span class="method-name">tearDown</span>
-                <span class="method-start">28396 ms</span>
+                <span class="method-start">36042 ms</span>
               </div> <!-- configuration-test after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">E2EDemoTesting.HomePage</div> <!-- chronological-class-name -->
               <div class="configuration-test after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">51564 ms</span>
+                <span class="method-start">63386 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
