--- a/test-output/old/Suite/reporter-output.html
+++ b/test-output/old/Suite/reporter-output.html
@@ -1,1 +1,12 @@
-<h2>Reporter output</h2><table></table>
+<h2>Reporter output</h2><table><tr><td>Driver is initialized</td></tr>
+<tr><td>Navigated to Home Page</td></tr>
+<tr><td>Driver is initialized</td></tr>
+<tr><td>Driver is initialized</td></tr>
+<tr><td>Navigated to Home Page</td></tr>
+<tr><td>Navigated to Home Page</td></tr>
+<tr><td>Successfully validated text message</td></tr>
+<tr><td>Navigate Bar is displayed</td></tr>
+<tr><td>Driver closed</td></tr>
+<tr><td>User Login with Invalid credentials</td></tr>
+<tr><td>Driver closed</td></tr>
+</table>
